<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_konvertilo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:gravity="fill"
    tools:context="nnieto.cg.Konvertilo">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tab_host">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/tabhost_layout">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">
                    <EditText
                        android:id="@+id/usd_input"
                        android:hint="@string/precio_usd_mxn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textAlignment="center" />
                    <Button
                        android:id="@+id/convertirBtn1"
                        android:text="Convertir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="convertUsdToMxn" />
                    <TextView
                        android:id="@+id/mxn_display"
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                        android:textAlignment="center" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">
                    <EditText
                        android:id="@+id/mxn_input"
                        android:hint="@string/precio_mxn_usd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textAlignment="center" />
                    <Button
                        android:id="@+id/convertirBtn2"
                        android:text="Convertir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="convertMxnToUsd"/>
                    <TextView
                        android:id="@+id/usd_display"
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                        android:textAlignment="center" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">
                    <TextView
                        android:id="@+id/exch_rate_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@android:drawable/ic_dialog_alert"
                        android:paddingLeft="25dp"
                        android:text="@string/exch_rate_instructions" />
                    <EditText
                        android:id="@+id/exch_rate_input"
                        android:hint="@string/pregunta_tipo_de_cambio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textAlignment="center" />
                    <Button
                        android:id="@+id/exch_rate_btn"
                        android:text="@string/exch_rate_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="saveExchangeRate" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
